implement roles and simple jwt encryption